# morphosc

./: .gitmodules  70-sensel.rules  CMakeLists.txt  README.md
src/: MorphOSCConfig.h.in  geometry.c  geometry.h  main.c  multitouch.c  multitouch.h  network.c  network.h
